# cpphello

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md
cmake/: install-rules.cmake  variables.cmake
include/hello/: hello.hpp
test/: CMakeLists.txt
test/source/: hello_test.cpp
